#ifndef HARD_ENEMY_H
#define HARD_ENEMY_H

#include "MediumEnemy.h"

class HardEnemy : public MediumEnemy 
{
public:
    HardEnemy();
};

#endif